deploy/kubernetes/overlays/gcp/arches-api-ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: example-static-ip
    networking.gke.io/managed-certificates: arches-api-certificate
    networking.gke.io/v1beta1.FrontendConfig: arches-frontend-config
